# storage/api-docs/api-docs.json
@@ -72,7 +72,9 @@
                         "description": "خطای احراز هویت"
                     }
                 }
-            },
+            }
+        },
+        "/api/items/create": {
             "post": {
                 "tags": [
                     "Items"
